cloudformation/monitoring/monitoring.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Modelo para criação de CloudFormation a partir do yaml.

Parameters:
  TagsProject:
    Type: String
    Default: "Devops"
  TagsTeam:
    Type: String
    Default: "Adatech"

Resources:
  MonitoringSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security group for monitoring
      SecurityGroupIngress: 
        - IpProtocol: tcp 
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp 
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp 
          FromPort: 9090
          ToPort: 9090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp 
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp 
          FromPort: 9093
          ToPort: 9093
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: sg-monitoring
        - Key: Project
          Value: !Ref TagsProject
        - Key: Team
          Value: !Ref TagsTeam
  MonitoringInstance: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-03c951bbe993ea087"
      InstanceType: t2.micro
      SecurityGroups: 
        - !Ref MonitoringSG
      # IamInstanceProfile: "ec2-custom"
      UserData: 
        Fn::Base64: | 
          #!/bin/bash
          sudo yum update -y 
          sudo yum install -y docker git
          sudo service docker start
          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/bin/docker-compose
          sudo chmod +x /usr/bin/docker-compose
          git clone https://github.com/danargolo/provisionamento-aws.git
          cd provisionamento-aws/monitoring
          sudo docker-compose up -d
      Tags:
        - Key: Name
          Value: ec2-monitoring
